--- a/StorhaugenWebsite/Pages/SharedCollectionView.razor
+++ b/StorhaugenWebsite/Pages/SharedCollectionView.razor
@@ -30,7 +30,7 @@ else if (_collection == null)
         <MudText Typo="Typo.body2" Color="Color.Secondary" Class="mb-4">
             Samlingen finnes ikke, eller du har ikke tilgang til den.
         </MudText>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/friends">
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="friends">
             Tilbake til venner
         </MudButton>
     </div>
