--- a/StorhaugenWebsite/Pages/CookBook.razor
+++ b/StorhaugenWebsite/Pages/CookBook.razor
@@ -4,6 +4,7 @@
 @using StorhaugenWebsite.Components
 @using StorhaugenWebsite.Shared.DTOs
 @using StorhaugenWebsite.Services
+@using StorhaugenWebsite.Shared.Extensions
 @using StorhaugenWebsite.Models
 @inject IUserRecipeService RecipeService
 @inject ICollectionStateService CollectionState
@@ -187,7 +188,7 @@
                                 @if (recipe.AverageRating > 0)
                                 {
                                     <div class="d-flex flex-column align-end" style="flex-shrink:0;">
-                                        <span class="rating-badge" style="color:@GetScoreColor(recipe.AverageRating);">
+                                        <span class="rating-badge" style="color:@recipe.AverageRating.ToRatingColorHex();">
                                             <MudIcon Icon="@Icons.Material.Rounded.Star" Size="Size.Small" Style="font-size:14px; margin-right:2px;" />
                                             @recipe.AverageRating.ToString("0.0")
                                         </span>
